invoice pdf number of pages and overflow problem solved

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ a {
   z-index: 1;
 }
 #chk{
-  width: 841px !important;
+  width: 575px !important;
   padding: 20px !important;
 }
 /*--------------Home-------------*/
